kubernetes/calctube/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calctube
  namespace: calctube
spec:
  selector:
    app: calctube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
